Add support for querying co2 and pm2p5 data. Add readme.
